workloads/guardrails/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: guardrails
  labels:
    kubernetes.io/metadata.name: guardrails
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
